k8s/ingress/traefik/traefik-ingressroute-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  endPoints:
  - web
  routes:
  - match: Host(`traefik.zjqi.top`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
